force-app/main/default/objects/RelatedHospital__c/RelatedHospital__c.object-meta.xml
<CustomObject>
    <label>Related Hospital</label>
    <nameField>
        <displayFormat>RH-{000000000}</displayFormat>
        <label>Related Hospital Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Hospitals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>