force-app/main/default/objects/RelatedHospital__c/fields/AbbottPartner__c.field-meta.xml
<CustomField>
    <fullName>AbbottPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Abbott Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AbbottPartner__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dietician</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AbbottPartner__c</referenceTo>
    <relationshipLabel>Related Hospitals</relationshipLabel>
    <relationshipName>Related_Hospitals</relationshipName>
    <type>Lookup</type>
</CustomField>