force-app/main/default/objects/RelatedHospital__c/fields/Hospital_Name__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Name__c</fullName>
    <formula>Institution__r.Name__c</formula>
    <label>Hospital Name</label>
    <type>Text</type>
</CustomField>