force-app/main/default/objects/RelatedHospital__c/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Institution</label>
    <referenceTo>Institution__c</referenceTo>
    <relationshipLabel>Related Hospitals</relationshipLabel>
    <relationshipName>Related_Hospitals</relationshipName>
    <type>Lookup</type>
</CustomField>