force-app/main/default/objects/RelatedHospital__c/fields/Sales_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_Name__c</fullName>
    <description>[16-Aug-21 Khai] To extract and display the field on the Related Hospital layout</description>
    <formula>AbbottPartner__r.PartnerName__c</formula>
    <label>Sales Person Name</label>
    <type>Text</type>
</CustomField>